[gd_scene load_steps=7 format=3 uid="uid://jxq8bmleqcse"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_u36dd"]
[ext_resource type="PackedScene" uid="uid://brfyp4cr5f4n0" path="res://scenes/paddle.tscn" id="2_s1kmi"]
[ext_resource type="FontFile" uid="uid://cl1hs0re0mb3b" path="res://assets/PublicPixel-z84yD.ttf" id="3_icbxd"]
[ext_resource type="AudioStream" uid="uid://dby30pn6rngnu" path="res://assets/pong_score.wav" id="4_35qgf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q7vu3"]
size = Vector2(1280, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j2iwn"]
size = Vector2(94, 720)

[node name="World" type="Node2D"]
script = ExtResource("1_u36dd")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.172549, 0.243137, 0.313726, 1)

[node name="Player1" parent="." instance=ExtResource("2_s1kmi")]
position = Vector2(50, 360)

[node name="Player2" parent="." instance=ExtResource("2_s1kmi")]
position = Vector2(1210, 360)
side = 1

[node name="Walls" type="StaticBody2D" parent="." groups=["walls"]]
collision_layer = 2
collision_mask = 3

[node name="Top" type="CollisionShape2D" parent="Walls"]
position = Vector2(640, -32)
shape = SubResource("RectangleShape2D_q7vu3")

[node name="Bottom" type="CollisionShape2D" parent="Walls"]
position = Vector2(640, 752)
shape = SubResource("RectangleShape2D_q7vu3")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 635.0
offset_right = 645.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLeft" type="Label" parent="."]
offset_left = 500.0
offset_top = 50.0
offset_right = 550.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("3_icbxd")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreRight" type="Label" parent="."]
offset_left = 740.0
offset_top = 50.0
offset_right = 790.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("3_icbxd")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftGoal" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftGoal"]
position = Vector2(-47, 360)
shape = SubResource("RectangleShape2D_j2iwn")

[node name="RightGoal" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightGoal"]
position = Vector2(1327, 360)
shape = SubResource("RectangleShape2D_j2iwn")

[node name="BallTimer" type="Timer" parent="."]
one_shot = true

[node name="ScoreSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_35qgf")

[connection signal="body_entered" from="LeftGoal" to="." method="_on_left_goal_body_entered"]
[connection signal="body_entered" from="RightGoal" to="." method="_on_right_goal_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
